# scicode-lint

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Claude.md  DOCUMENTATION_MAP.md  INSTALLATION.md  LICENSE  README.md  config.toml  pyproject.toml
.claude/agents/: pattern-reviewer
.claude/agents/pattern-reviewer/: BATCH_OPERATIONS.md  MIGRATION_NOTES.md  QUICK_START.md  README.md  agent.json  examples.md  system_prompt.md
benchmarks/: README.md  benchmark.py  benchmark_system.py  file_size_benchmark.py  max_tokens_experiment.py  speed_benchmark.py
benchmarks/fixtures/: large_500_lines.py  medium_200_lines.py  small_30_lines.py  xlarge_1000_lines.py
benchmarks/reports/file_size/: BENCHMARK_SUMMARY.md
benchmarks/reports/max_tokens/: BENCHMARK_SUMMARY.md  comparison_20260309_112324.json
benchmarks/reports/speed/: BENCHMARK_SUMMARY.md  benchmark_20260309_125359.json  benchmark_20260309_131112.json  benchmark_20260309_131856.json
consolidated_results/: CONSOLIDATED_REPORT.md  generate_consolidated_report.py
dev_lib/: __init__.py  claude_cli.py  config.py  run_output.py
docs_dev_genai/: ARCHITECTURE.md  CONTINUOUS_IMPROVEMENT.md  DETECTION_ARCHITECTURE.md  IMPLEMENTATION.md  META_IMPROVEMENT_LOOP.md  MODEL_USAGE.md  QUALITY_GATES.md  README.md  TOOLS.md
docs_use_genai/: API_REFERENCE.md  GENAI_AGENT_GUIDE.md  INTERFACE_ANALYSIS.md  PATTERN_LOOKUP_EXAMPLE.md  README.md  VLLM_UTILITIES.md
docs_use_human/: MODEL_SELECTION.md  README.md  USAGE.md  VRAM_REQUIREMENTS.md
docs_use_human/performance/: BENCHMARKING.md  CONCURRENCY_GUIDE.md  VLLM_MONITORING.md
evals/: EVALUATION_APPROACHES.md  PYDANTIC_MIGRATION.md  README.md  __init__.py  conftest.py  judge_models.py  metrics.py  report_generator.py  requirements.txt  run_eval.py  run_eval_llm_judge.py  test_all_patterns.py  test_definitions.yaml  validators.py
evals/integration/: .gitattributes  CONTRIBUTING.md  DESIGN_NOTES.md  QUICKSTART.md  README.md  __init__.py  dynamic_eval.py  expected_findings.yaml  integration_eval.py  integration_judge_report.md  run_integration_eval.py  run_integration_eval_llm_judge.py
evals/integration/reports/: .gitignore  combinatorial_report.md  curated_report.md  integration_report.md
evals/integration/scenarios/: data_preprocessing_bugs.py  ml_pipeline_complete.py  pytorch_training_issues.py  repeated_bugs.py
evals/prompts/: __init__.py  judge_system_prompt.py
pattern_verification/: README.md  utils.py
pattern_verification/deterministic/: diversity_check.py  validate.py
pattern_verification/pattern-reviewer/: agent.json  system_prompt.md
pattern_verification/semantic/: semantic_validate.py
pattern_verification/semantic/pattern-reviewer/: agent.json  system_prompt.md
patterns/: README.md  STRUCTURE.md  _registry.toml
patterns/ai-data/pt-010-dataloader-no-workers/: pattern.toml
patterns/ai-inference/pt-006-inference-without-no-grad/: pattern.toml
patterns/ai-inference/pt-006-logit-threshold-without-sigmoid/: pattern.toml
patterns/ai-inference/pt-007-inference-without-eval/: pattern.toml
patterns/ai-inference/pt-011-model-device-mismatch/: pattern.toml
patterns/ai-inference/pt-011-unbatched-gpu-inference/: pattern.toml
patterns/ai-inference/pt-013-missing-inference-mode/: pattern.toml
patterns/ai-inference/pt-014-cuda-timing-without-sync/: pattern.toml
patterns/ai-inference/pt-015-device-mismatch-load/: pattern.toml
patterns/ai-inference/pt-016-half-precision-cpu-inference/: pattern.toml
patterns/ai-inference/pt-017-jit-trace-control-flow/: pattern.toml
patterns/ai-inference/pt-018-dynamic-shape-onnx-export/: pattern.toml
patterns/ai-inference/pt-019-cudnn-benchmark-inference/: pattern.toml
patterns/ai-inference/pt-020-softmax-before-cross-entropy/: pattern.toml
patterns/ai-inference/pt-021-missing-warmup-benchmark/: pattern.toml
patterns/ai-inference/pt-022-compile-graph-mode-mismatch/: pattern.toml
patterns/ai-training/ml-001-scaler-leakage/: pattern.toml
patterns/ai-training/ml-002-target-leakage/: pattern.toml
patterns/ai-training/ml-003-target-encoding-leakage/: pattern.toml
patterns/ai-training/ml-003-temporal-leakage/: pattern.toml
patterns/ai-training/ml-004-imbalanced-accuracy-metric/: pattern.toml
patterns/ai-training/ml-005-cv-temporal-shuffle/: pattern.toml
patterns/ai-training/ml-006-temporal-shift-leakage/: pattern.toml
patterns/ai-training/ml-007-test-set-preprocessing/: pattern.toml
patterns/ai-training/ml-008-unstratified-split/: pattern.toml
patterns/ai-training/ml-009-overlap-leakage/: pattern.toml
patterns/ai-training/ml-010-multi-test-leakage/: pattern.toml
patterns/ai-training/pt-001-missing-train-mode/: pattern.toml
patterns/ai-training/pt-002-missing-eval-mode/: pattern.toml
patterns/ai-training/pt-003-inplace-leaf-variable/: pattern.toml
patterns/ai-training/pt-004-missing-zero-grad/: pattern.toml
patterns/ai-training/pt-005-detached-loss-backward/: pattern.toml
real_world_demo/: README.md  __init__.py  analyze_errors.py  config.py  database.py  generate_report.py  models.py  run_analysis.py  utils.py  verify_findings.py
real_world_demo/output_examples/: README.md
real_world_demo/paper_sets/: holdout_set.json  holdout_set.md  meta_loop_set.json  meta_loop_set.md
real_world_demo/reports/: FINDINGS_REPORT_2026-03-11_2126.md  VERIFICATION_REPORT_2026-03-11_2126.md
real_world_demo/sources/: __init__.py
scripts/: pre-commit  project_stats_generate.py  release.sh  review_patterns.sh
src/scicode_lint/: __init__.py  __main__.py  ast_utils.py  cli.py  config.py  config.toml  linter.py
tests/: README.md  README_VRAM_TESTING.md  __init__.py  conftest.py  test_ast_utils.py  test_claude_cli.py  test_context_length.py  test_detection_result.py  test_diversity_check.py  test_doc_cache.py  test_eval_runner.py  test_example.py  test_preprocessing.py  test_prompt_injection_defense.py  test_real_world_demo.py  test_repo_filter.py  test_vllm.py  test_vllm_bash.sh
tests/fixtures/: doc_with_nav.md
tools/: check_dependencies.py  start_dashboard.sh  vllm_dashboard.py
(+778 files in other folders)
