[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicode-lint"
version = "0.1.5"
description = "AI-powered linter for ML code written for scientific applications. Catches methodology bugs — data leakage, missing seeds, silent numerical errors — that traditional linters miss. Runs locally, no cloud APIs."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Sergey Samsonau"}
]
keywords = ["linting", "scientific-computing", "machine-learning", "pytorch", "research", "vllm", "local-first", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "aiofiles>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/ssamsonau/scicode-lint"
Repository = "https://github.com/ssamsonau/scicode-lint"
"Bug Tracker" = "https://github.com/ssamsonau/scicode-lint/issues"
Documentation = "https://github.com/ssamsonau/scicode-lint#readme"

[project.scripts]
scicode-lint = "scicode_lint.cli:main"

[project.optional-dependencies]
vllm-server = [
    "vllm>=0.17.0",  # vLLM server for local GPU hosting (optional - can use remote server)
]
eval = [
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=24.0.0",
    "pytest>=7.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
    "nvidia-ml-py>=12.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scicode_lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Exclude pattern test files (they contain intentional bugs for evaluation)
norecursedirs = ["patterns", "evals"]
# Custom markers
markers = [
    "vllm: tests that require a running vLLM server (deselected by default, run with: pytest -m vllm)",
]
# Skip vLLM tests by default (they require external server)
addopts = "-m 'not vllm'"

[tool.ruff]
line-length = 100
target-version = "py39"
# Exclude pattern test files (contain intentional bugs and minimal examples)
exclude = ["patterns/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompts contain long strings that shouldn't be wrapped
"src/scicode_lint/detectors/prompts.py" = ["E501"]
"evals/integration/run_integration_eval_llm_judge.py" = ["E501"]
"evals/integration/dynamic_eval.py" = ["E501"]
"pattern_verification/deterministic/validate.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Exclude pattern files and integration scenarios (test code with intentional bugs)
exclude = [
    "patterns/",
    "evals/integration/scenarios/",
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "torch.*",
    "toml",
    "pandas",
]
ignore_missing_imports = true
