[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicode-lint"
version = "0.2.1"
description = "AI-powered linter for scientific ML code. Detects methodology bugs such as data leakage, incorrect cross-validation, numerical instability, and reproducibility issues that produce plausible but wrong results. 66 detection patterns across 5 categories. Runs via local or institutional vLLM server, no cloud APIs."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Sergey Samsonau"}
]
keywords = ["linting", "scientific-computing", "machine-learning", "pytorch", "research", "vllm", "local-first", "self-hosted", "reproducibility", "data-leakage", "methodology-bugs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "loguru>=0.7.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ssamsonau/scicode-lint"
Repository = "https://github.com/ssamsonau/scicode-lint"
"Bug Tracker" = "https://github.com/ssamsonau/scicode-lint/issues"
Documentation = "https://github.com/ssamsonau/scicode-lint#readme"

[project.scripts]
scicode-lint = "scicode_lint.cli:main"

[project.optional-dependencies]
vllm-server = [
    "vllm>=0.17.1",  # vLLM server for local GPU hosting (optional - can use remote server)
]
eval = [
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0",
    "pytest>=7.0",
    "pytest-asyncio>=1.0.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "aiolimiter>=1.1.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
    "nvidia-ml-py>=12.0.0",
]
real-world-demo = [
    "datasets>=2.0.0",  # HuggingFace datasets library for PWC archive
]
all = [
    "scicode-lint[dev,vllm-server,eval,dashboard,real-world-demo]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scicode_lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Exclude pattern test files (they contain intentional bugs for evaluation)
norecursedirs = ["src/scicode_lint/patterns", "evals"]
# Auto-detect async test functions (no @pytest.mark.asyncio needed)
asyncio_mode = "auto"
# Custom markers
markers = [
    "vllm: tests that require a running vLLM server (deselected by default, run with: pytest -m vllm)",
]
# Skip vLLM tests by default (they require external server)
addopts = "-m 'not vllm'"

[tool.ruff]
line-length = 100
target-version = "py313"
# Exclude pattern test files (contain intentional bugs and minimal examples)
exclude = ["src/scicode_lint/patterns/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompts contain long strings that shouldn't be wrapped
"src/scicode_lint/detectors/prompts.py" = ["E501"]
"src/scicode_lint/repo_filter/classify.py" = ["E501"]
"evals/integration/integration_eval.py" = ["E501"]
"pattern_verification/deterministic/validate.py" = ["E501"]
"real_world_demo/sources/papers_with_code/filter_abstracts.py" = ["E501"]
"real_world_demo/analyze_errors.py" = ["E501"]
"evals/integration/generated/**" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Exclude pattern files, integration scenarios, and demo data directories
exclude = [
    "src/scicode_lint/patterns/",
    "evals/integration/scenarios/",
    "evals/integration/curated/",
    "evals/integration/combinatorial/",
    "evals/integration/generated/",
    "real_world_demo/collected_code/",
    "real_world_demo/cloned_repos/",
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "torch.*",
    "toml",
    "pandas",
    "datasets",
    "html2text",
]
ignore_missing_imports = true
